Tests/VaultCoreTests/CompileFail/Fixtures/securebytes-copy-control.swift
import VaultCore

// CONTROL: a single move of a SecureBytes value is fine.
func control(bytes: consuming SecureBytes) -> Int {
    let a = bytes
    return a.count
}
